--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 body {
   font-family: sans-serif;
   color: #444;
+}
+.container {
+  width: 800px;
+  margin: 0 auto;
 }
 h1,
 h2,
@@ -14,9 +22,12 @@ h1 {
 }
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 h4 {
   font-size: 20px;
@@ -26,9 +37,14 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 20px;
 }
 li {
   font-family: 20px;
+  margin-bottom: 10px;
+}
+li:last-child {
+  margin-bottom: 0;
 }
 .related {
   list-style: none;
@@ -46,9 +62,14 @@ li {
 }
 .main-header {
   background-color: #f7f7f7;
+  padding: 20px;
+  margin-bottom: 60px;
+  height: 80px;
 }
 aside {
   background-color: #f7f7f7;
+  padding: 50px 0;
+  width: 500px;
 }
 
 a:link {
@@ -66,4 +87,20 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+.post-header {
+  margin-bottom: 40px;
+}
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
+}
+article {
+  margin-bottom: 60px;
+}
+.post-img {
+  width: 100%;
+  height: auto;
+  box-shadow: 0 0 5px rgb(0, 0, 0, 0.5);
 }
